<resources>

    <string name="app_name">SHK</string>
    <string name="connect_button">Connect</string>
    <string name="light_control_button">Lysstyring</string>
    <string name="light_1">Taklampe</string>
    <string name="light_2">Vegglampe</string>
    <string name="light_3">Gulvlampe</string>
    <string name="light_4">Alt lys på</string>
    <string name="light_off">Alt lys av</string>
    <string name="kitchen">Kjøkken</string>
    <string name="bedroom_1">Soverom 1</string>
    <string name="bedroom_2">Soverom 2</string>
    <string name="bedroom_3">Soverom 3</string>
    <string name="living_room">Stue</string>
    <string name="kitch_lr">Kjøkken og stue</string>
    <string name="bathroom">Bad</string>
    <string name="hallway">Gang</string>
    <string name="office">Kontor</string>
    <string name="room_view_light">Lysstyring</string>
    <string name="room_view_temp">Temperatur</string>
    <string name="climate_view">Klima</string>
    <string name="heating_view">Temperatur</string>
    <string name="ventilation_view">Ventilasjon</string>
    <string name="lighting_kitchen">Lysstyring - Kjøkken</string>
    <string name="lighting_bathroom">Lysstyring - Bad</string>
    <string name="lighting_living_room">Lysstyring - Stue</string>
    <string name="lighting_bedroom1">Lysstyring - Soverom 1</string>
    <string name="lighting_bedroom2">Lysstyring - Soverom 2</string>
    <string name="lighting_bedroom3">Lysstyring - Soverom 3</string>
    <string name="lighting_office">Lysstyring - Kontor</string>
    <string name="lighting_hallway">Lysstyring - Gang</string>
    <string name="temp_bathroom">Temperatur - Bad</string>
    <string name="temp_kitchen">Temperatur - Kjøkken</string>
    <string name="temp_living_room">Temperatur - Stue</string>
    <string name="temp_bed1">Temperatur - Soverom 1</string>
    <string name="temp_bed2">Temperatur - Soverom 2</string>
    <string name="temp_bed3">Temperatur - Soverom 3</string>
    <string name="temp_office">Temperatur - Kontor</string>
    <string name="temp_hallway">Temperatur - Gang</string>
    <string name="off">Av</string>
    <string name="lvl1">Trinn 1</string>
    <string name="lvl2">Trinn 2</string>
    <string name="lvl3">Trinn 3</string>
    <string name="Login">Logg inn</string>
    <string name="login_page">Logg inn</string>
    <string name="ask_username">Skriv inn brukernamn</string>
    <string name="ask_pw">Skriv inn passord</string>
    <string name="windows">Takvinduer</string>
    <string name="window_1">Vindu kjøkken</string>
    <string name="window_2">Vindu gang</string>
    <string name="window_3">Vindu stue</string>
    <string name="open">Åpent</string>
    <string name="closed">Lukket</string>
    <string name="stop">Stoppet</string>
    <string name="open2">Åpne</string>
    <string name="close">Lukke</string>
    <string name="stop2">Stoppe</string>
    <string name="window">Vindu</string>
    <string name="measure1">Oversikt</string>
    <string name="modes">Moduser</string>
    <string name="title_activity_lighting">Lysstyring</string>
    <string name="ph">PLACEHOLDER</string>
    <string name="current_temp">Nå</string>
    <string name="static_temp">Styr denne</string>
    <string name="day">Dag</string>
    <string name="night">Natt</string>
    <string name="holiday">Ferie</string>
    <string name="away">Borte</string>
    <string name="k_roof">Kjøkken - tak</string>
    <string name="k_tpl">Kjøkken - takpunktlys</string>
    <string name="sk_tpl">Stue v/kjøkken - takpunktlys</string>
    <string name="sk_tplv">Stue v/kjøkken - takpunktlys Velux</string>
    <string name="sk_roof1">Stue v/kjøkken - vegg v/gang</string>
    <string name="sk_roof2">Stue v/kjøkken - tak</string>
    <string name="sk_all">ALT LYS</string>
    <string name="bad_all">ALT LYS</string>
    <string name="bad_wl">Bad - vegg</string>
    <string name="bad_shower">Bad - dusj</string>
    <string name="bad_l1">Bad - lys 1</string>
    <string name="bad_l2">Bad - lys 2</string>
    <string name="bad_roof">Bad - tak</string>
    <string name="bed_all">ALT LYS</string>
    <string name="office_all">ALT LYS</string>
    <string name="lr_all">ALT LYS</string>
    <string name="lr_win">Stue - v/vindu</string>
    <string name="lr_l1">Stue - tak</string>
    <string name="lr_wl">Stue - v/vegg</string>
    <string name="hall_all">ALT LYS</string>
    <string name="hall_in">Inngangsdør</string>
    <string name="hall_bt">Ytter gang</string>
    <string name="remember">Husk meg</string>
    <string name="ch_pw">Bytt passord?</string>
    <string name="laundry_room">Vaskerom</string>
    <string name="lau_roof">Vaskerom - tak</string>
    <string name="lau_wl">Vaskerom - vegg</string>
    <string name="curr_room">Oppholdsrom</string>
    <string name="flat_all">ALT LYS</string>
    <string name="flat_rf">Oppholdsrom - taklys 1</string>
    <string name="flat_rf1">Oppholdsrom - taklys 2</string>
    <string name="bed_room">Soverom</string>
    <string name="all_vent">Alle andre rom</string>
    <string name="adm_view">Administrator side</string>
    <string name="m1_v">Forbruk toppleilighet</string>
    <string name="m2_v">Forbruk leilighet</string>
    <string name="m3_v">Forbruk arbeidsrom</string>
    <string name="current_temp_room">Nå</string>
    <string name="wanted_temp_room">Ønsket</string>
    <string name="choose_mode">Modusvalg</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
