<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weebly.smarthusgruppen.shk_applikasjon.RoomList">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitchen"
        android:id="@+id/room1_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bathroom"
        android:id="@+id/room2_button"
        android:layout_below="@+id/room1_button"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/living_room"
        android:id="@+id/room3_button"
        android:layout_below="@+id/room2_button"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bedroom_1"
        android:id="@+id/room4_button"
        android:layout_below="@+id/room3_button"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bedroom_1"
        android:id="@+id/room4_button"
        android:layout_below="@+id/room3_button"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bedroom_2"
        android:id="@+id/room5_button"
        android:layout_below="@+id/room4_button"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bedroom_3"
        android:id="@+id/room6_button"
        android:layout_below="@+id/room5_button"
        android:layout_alignLeft="@+id/room5_button"
        android:layout_alignStart="@+id/room5_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/office"
        android:id="@+id/room7_button"
        android:layout_below="@+id/room6_button"
        android:layout_alignLeft="@+id/room6_button"
        android:layout_alignStart="@+id/room6_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hallway"
        android:id="@+id/room8_button"
        android:layout_below="@+id/room7_button"
        android:layout_alignLeft="@+id/room7_button"
        android:layout_alignStart="@+id/room7_button" />
</RelativeLayout>
