<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vent_id_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weebly.smarthusgruppen.shk_applikasjon.Arbeidsrom.Ventilation_3"
    android:contentDescription="home button">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:src="@mipmap/home_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:textOn="@string/lvl1"
        android:textOff="@string/lvl1"
        android:id="@+id/lvl13_button"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/home_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:textOff="@string/lvl2"
        android:textOn="@string/lvl2"
        android:id="@+id/lvl23_button"
        android:layout_alignTop="@+id/lvl13_button"
        android:layout_toRightOf="@+id/lvl13_button"
        android:layout_toEndOf="@+id/lvl13_button" />

    <ToggleButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/lvl33_button"
        android:layout_alignTop="@+id/lvl23_button"
        android:layout_toRightOf="@+id/lvl23_button"
        android:layout_toEndOf="@+id/lvl23_button"
        android:checked="false"
        android:textOff="@string/lvl3"
        android:textOn="@string/lvl3"/>

    <ToggleButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/lvl43_button"
        android:layout_alignTop="@+id/lvl33_button"
        android:layout_toRightOf="@+id/lvl33_button"
        android:layout_toEndOf="@+id/lvl33_button"
        android:checked="false"
        android:textOff="@string/off"
        android:textOn="@string/off" />

</RelativeLayout>
