<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weebly.smarthusgruppen.shk_applikasjon.TypeOfMode">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:src="@mipmap/home_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <ToggleButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:textOff="@string/day"
        android:textOn="@string/day"
        android:id="@+id/toggle_day"
        android:checked="false"
        android:layout_below="@+id/toggle_night"
        android:layout_alignLeft="@+id/toggle_night"
        android:layout_alignStart="@+id/toggle_night" />

    <ToggleButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:textOff="@string/night"
        android:textOn="@string/night"
        android:id="@+id/toggle_night"
        android:checked="false"
        android:layout_below="@+id/toggle_holiday"
        android:layout_alignLeft="@+id/toggle_holiday"
        android:layout_alignStart="@+id/toggle_holiday" />

    <ToggleButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:textOff="@string/holiday"
        android:textOn="@string/holiday"
        android:id="@+id/toggle_holiday"
        android:checked="false"
        android:layout_below="@+id/toggle_away"
        android:layout_alignLeft="@+id/toggle_away"
        android:layout_alignStart="@+id/toggle_away" />

    <ToggleButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:textOff="@string/away"
        android:textOn="@string/away"
        android:id="@+id/toggle_away"
        android:checked="false"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/home_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
