<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/windows_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weebly.smarthusgruppen.shk_applikasjon.Toppleilighet.Windows">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:src="@mipmap/home_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textOn="@string/open"
        android:textOff="@string/open2"
        android:id="@+id/win1_button"
        android:layout_marginTop="41dp"
        android:checked="false"
        android:layout_below="@+id/mode_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textOff="@string/close"
        android:textOn="@string/closed"
        android:id="@+id/win2_button"
        android:layout_alignTop="@+id/win1_button"
        android:layout_toRightOf="@+id/win1_button"
        android:layout_toEndOf="@+id/win1_button"
        android:checked="false" />

    <ToggleButton
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/win3_button"
        android:layout_alignTop="@+id/win2_button"
        android:layout_toRightOf="@+id/win2_button"
        android:layout_toEndOf="@+id/win2_button"
        android:checked="false"
        android:textOff="@string/stop2"
        android:textOn="@string/stop"/>

    <TextView
        android:layout_width="85dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:id="@+id/win4_button"
        android:layout_alignBottom="@+id/win3_button"
        android:layout_toRightOf="@+id/win3_button"
        android:layout_toEndOf="@+id/win3_button"

        android:textColor="#090909"

         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/window_1"
        android:id="@+id/vindu_text1"
        android:layout_above="@+id/win2_button"
        android:layout_centerHorizontal="true"
        android:textColor="#090909"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Modus:"
        android:id="@+id/mode_view"
        android:layout_below="@+id/home_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/window_2"
        android:id="@+id/vindu_text2"
        android:layout_below="@+id/win4_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#090909"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <ToggleButton
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textOn="@string/open"
        android:textOff="@string/open2"
        android:id="@+id/win5_button"
        android:layout_below="@+id/vindu_text2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textOff="@string/close"
        android:textOn="@string/closed"
        android:id="@+id/win6_button"
        android:layout_alignTop="@+id/win5_button"
        android:layout_toRightOf="@+id/win5_button"
        android:layout_toEndOf="@+id/win5_button"
        android:checked="false" />

    <ToggleButton
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/win7_button"
        android:layout_alignTop="@+id/win6_button"
        android:layout_toRightOf="@+id/win6_button"
        android:layout_toEndOf="@+id/win6_button"
        android:checked="false"
        android:textOff="@string/stop2"
        android:textOn="@string/stop"/>

    <TextView
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/win8_button"
        android:layout_alignBottom="@+id/win7_button"
        android:layout_toRightOf="@+id/win7_button"
        android:layout_toEndOf="@+id/win7_button"
        android:textColor="#090909"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/window_3"
        android:id="@+id/vindu_text3"
        android:layout_below="@+id/win8_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#090909"/>

    <ToggleButton
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textOn="@string/open"
        android:textOff="@string/open2"
        android:id="@+id/win9_button"
        android:layout_below="@+id/vindu_text3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:textOff="@string/close"
        android:textOn="@string/closed"
        android:id="@+id/win10_button"
        android:layout_alignTop="@+id/win9_button"
        android:layout_toRightOf="@+id/win9_button"
        android:layout_toEndOf="@+id/win9_button" />

    <ToggleButton
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/win11_button"
        android:layout_alignTop="@+id/win10_button"
        android:layout_toRightOf="@+id/win10_button"
        android:layout_toEndOf="@+id/win10_button"
        android:checked="false"
        android:textOff="@string/stop2"
        android:textOn="@string/stop"/>

    <TextView
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/win12_button"
        android:layout_alignBottom="@+id/win11_button"
        android:layout_toRightOf="@+id/win11_button"
        android:layout_toEndOf="@+id/win11_button"

        android:textColor="#090909"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

</RelativeLayout>
