<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weebly.smarthusgruppen.shk_applikasjon.LoginClient">



    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ask_pw"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:layout_below="@+id/edittext_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_username"
        android:hint="@string/ask_username"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />



    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Login"
        android:text="@string/Login"
        android:layout_below="@+id/edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />




</RelativeLayout>
    </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
